--- a/finetune_config_ara.json
+++ b/finetune_config_ara.json
@@ -3,9 +3,9 @@
     "push_to_hub": false,
     "hub_model_id": "ara_tts_finetuning/ara_tts_finetuning",
     "overwrite_output_dir": true,
-    "output_dir": "../output",
+    "output_dir": "./output",
 
-    "dataset_name": "../dataset/",      
+    "dataset_name": "./dataset/",      
     "dataset_config_name": "welsh_female", 
     "audio_column_name": "audio", 
     "text_column_name":"text",
@@ -26,10 +26,10 @@
     "preprocessing_num_workers": 4,
 
     "do_train": true,
-    "num_train_epochs": 5,
+    "num_train_epochs": 1,
     "gradient_accumulation_steps": 1,
     "gradient_checkpointing": false,
-    "per_device_train_batch_size": 16,
+    "per_device_train_batch_size": 1,
     "learning_rate": 2e-5,
     "adam_beta1": 0.8,
     "adam_beta2": 0.99,
@@ -37,9 +37,9 @@
     "group_by_length": false,
 
     "do_eval": true, 
-    "eval_steps": 50,
-    "per_device_eval_batch_size": 16,
-    "max_eval_samples": 25, 
+    "eval_steps": 1,
+    "per_device_eval_batch_size": 1,
+    "max_eval_samples": 2, 
     "do_step_schedule_per_epoch": true,
 
     "weight_disc": 3,
