--- a/finetune_config_ara.json
+++ b/finetune_config_ara.json
@@ -12,7 +12,7 @@
     "train_split_name": "train",
     "eval_split_name": "eval",
   
-    "override_speaker_embeddings": true,
+    "override_speaker_embeddings": false,
     "filter_on_speaker_id": 5223,
 
     
@@ -28,13 +28,12 @@
     "do_train": true,
     "num_train_epochs": 1,
     "gradient_accumulation_steps": 1,
-    "gradient_checkpointing": false,
     "per_device_train_batch_size": 1,
     "learning_rate": 2e-5,
     "adam_beta1": 0.8,
     "adam_beta2": 0.99,
     "warmup_ratio": 0.01,
-    "group_by_length": false,
+ 
 
     "do_eval": true, 
     "eval_steps": 1,
