--- a/finetune_config_ara.json
+++ b/finetune_config_ara.json
@@ -30,13 +30,15 @@
     "gradient_accumulation_steps": 1,
     "per_device_train_batch_size": 10,
     "learning_rate": 2e-5,
-    "adam_beta1": 0.8,
+    "adam_beta1": 0.92,
     "adam_beta2": 0.99,
     "warmup_ratio": 0.01,
- 
+    "d_learning_rate": 2e-4,
+    "d_adam_beta1": 0.8,
+    "d_adam_beta2": 0.99,
 
     "do_eval": true, 
-    "eval_steps": 10,
+    "eval_steps": 5,
     "per_device_eval_batch_size": 10,
     "max_eval_samples": 2, 
     "do_step_schedule_per_epoch": true,
